[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dw-cli-changer"
version = "1.0.0"
description = "CLI para gerenciar perfis dw.json e aplicar em projetos"
requires-python = ">=3.10"
authors = [
  { name = "DW CLI Changer" }
]
dependencies = [
  "questionary>=2.0.1"
]

[project.scripts]
dw-cli-changer = "dw_cli_changer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
